2001-07-10  Dominik Reichardt <gigdr@tesionmail.de>
	* Makefile.cygwin, Makefile.win32: Travis' updates

2001-07-09  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/: updated FAQ and changed the layout and the layout files
	* Faq: updated

2001-07-09  Ryan Nunn <triforce@merlin.net.au>
	* gamewin.cc: Casting an unsigned char* to char*
	* tools/expack.cc: Expack will now produce a header for any flex it
	  creates. The Header is called name_flx.h or simlar. The header
	  contains #defines for all the files that have been put in it.

2001-07-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* game.cc, ??game.cc, exultmenu.cc, gamewin.*, keyactions.cc:
	fixed more annoying palette-flashes. cleaned up a bit
	* imagescl.cc: fixed 2xSaI, supereagle, bilinear problem

2001-07-09  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/readme.txt: instructions on how to build FAQ

2001-07-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.cc: renamed 'SI intro' to 'alternate SI intro'
	* useval.*: added an undefined state to fix various display issues

2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* gumps/Slider_gump.cc: handle left/right arrows (as suggested on IRC
	  by Dominus)

2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* gumps/VideoOptions_gump.*: implemented part of the Video Options
	  in-game menu. Still lacking gamma sliders
	* data/*.shp: shapes needed for the above

2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* gumps/Slider_gump.cc: allow clicking on scroller area to quickly
	  move to the desired position

2001-07-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* bggame.cc: worked on getting correct timing of Guardian in intro.
	  It should work at all resolutions/scaling factors.
	* gamewin.cc: made plasma 8 times faster

2001-07-09  Jeff Freedman  <jeff@amy.nerble.net>

	* gamerend.cc: Show chunk outlines when in map-editor mode.

2001-07-08  Jeff Freedman  <jeff@amy.nerble.net>
