@@ -1,3 +1,8 @@
+2001-07-10  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* /mapedit: Chunk browser added.  And you can drag a chunk
+	(terrain) into Exult.
+
 2001-07-10  Dominik Reichardt <gigdr@tesionmail.de>
 	* Makefile.cygwin, Makefile.win32: Travis' updates
 
